RESOLVED FIXED14032
REGRESSION: tab characters cannot be entered into text fields
https://bugs.webkit.org/show_bug.cgi?id=14032
Summary REGRESSION: tab characters cannot be entered into text fields
Rachael Worthington (cheers)
Reported 2007-06-07 17:05:55 PDT
steps to repro: 1 - type a tab into a text editor 2 - copy it 3 - focus on a text field (such as any of the ones on this lovely page) 4 - attempt to paste. note that nothing happens. if you paste in the center of a word there's no spaces, nothing. Also, if you attempt to set a text field's value via calling [element setValue:@"foo\tbar"]; the text field will end up displaying 'foo'. The rest of the string is concatinated at the tab character. If tab characters cannot be entered into text fields, it seems reasonable to at least just remove them rather than to discard any following information.
Attachments
Alexey Proskuryakov
Comment 1 2007-06-08 03:57:11 PDT
Regression/P1.
Oliver Hunt
Comment 2 2007-07-15 18:34:50 PDT
Oliver Hunt
Comment 3 2007-07-15 18:39:31 PDT
Fix landed r24298
Oliver Hunt
Comment 4 2007-07-15 23:17:04 PDT
Additional fix for that landed in r24301
Note You need to log in before you can comment on or make changes to this bug.