LayoutTests:

Reviewed by Maciej.

        Testcase for <rdar://problem/5336602> REGRESSION: tab characters cannot be entered into text fields
                     http://bugs.webkit.org/show_bug.cgi?id=14032

        * fast/forms/tab-in-input-expected.txt: Added.
        * fast/forms/tab-in-input.html: Added.

WebCore:

        Reviewed by Maciej

        Fix for <rdar://problem/5336602> REGRESSION: tab characters cannot be entered into text fields
                http://bugs.webkit.org/show_bug.cgi?id=14032

        constrainValue attempted to block control characters from being inserted
        by a simple less than ' ' check, which prevent tab characters from being
        inserted.  This patch adds an additional check to allow the tab character
        again

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::constrainValue):



Canonical link: https://commits.webkit.org/18970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@24298 268f45cc-cd09-0410-ab3c-d52691b4dbfc